# hashit

./: .elementary-ide.proj  .gitignore  CMakeLists.txt  README.md  meson.build
data/: CMakeLists.txt  com.github.artemanufrij.hashit.appdata.xml  com.github.artemanufrij.hashit.appdata.xml.in  com.github.artemanufrij.hashit.contract  com.github.artemanufrij.hashit.contractor  com.github.artemanufrij.hashit.desktop  com.github.artemanufrij.hashit.desktop.in
debian/: changelog  control  copyright
meson/: post_install.py
po/: POTFILES  ca.po  com.github.artemanufrij.hashit.pot  cs.po  de.mo  de.po  es.po  fo.po  fr.po  fr_CA.po  he.po  ja.po  ko.po  ku.po  lb.po  lt.po  lv.po  ms.po  nb.po  nl.po  no.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sn.po  sr.po  uk.po  vi.po
schemas/: com.github.artemanufrij.hashit.gschema.xml
src/: Application.vala  CMakeLists.txt  MainWindow.vala  MainWindow.vala~  Settings.vala
src/Widgets/: Algorythm.vala
